--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
   "require": {
     "php": ">=5.4.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "4.5.*"
+  },
   "autoload": {
     "psr-4": {
       "Kollway\\Alipay\\": "src/Kollway/Alipay"
